# MRSD_project

./: README.md
beginner_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml
beginner_tutorials/src/: CMakeLists.txt  CMakeLists.txt~  talker.cpp
cv_tracker/: CMakeLists.txt  CMakeLists.txt~
cv_tracker/launch/: klt_tracking.launch  ssd.launch  ssd.launch~
cv_tracker/lib/lktracker/: LkTracker.cpp  LkTracker.hpp
cv_tracker/model/models _512/VGGNet/VOC0712/SSD_512x512_ft/: VGG_VOC0712_SSD_512x512_ft_iter_120000.caffemodel  deploy.prototxt  finetune_ssd_pascal_512.py  score_ssd_pascal_512_ft.py  solver.prototxt  test.prototxt  train.prototxt
cv_tracker/msg/: depth.msg  image_obj_tracked.msg
cv_tracker/nodes/klt_track/: klt_track.cpp~
cv_tracker/nodes/ssd/: ssd_detector.cpp  ssd_node.cpp  ssd_node.cpp~
depth_measure/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
depth_measure/launch/: depth_measure.launch  depth_measure.launch~
depth_measure/msg/: RadarTCP.msg  depth.msg  depth.msg~  position.msg  position.msg~
depth_measure/src/: depth_measure.cpp  depth_measure.cpp~  vis_gps.cpp  vis_syn.cpp
mht_test/: CMakeLists.txt  package.xml
mht_test/cmake/Modules/: Findopenmht.cmake  LibFindMacros.cmake
mht_test/src/: .main_msg.cpp.swp  CMakeLists.txt  CMakeLists.txt~  main.cpp  main_msg.cpp
vis/: CMakeLists (copy).txt  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
vis/launch/: vis.launch~
vis/msg/: depth.msg
vis/src/: vis_car.cpp  vis_person.cpp  vis_radar.cpp  visualize.cpp  visualize.cpp~
(+8 files in other folders)
